finished to update copyright informations